klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/audit/AuditWithoutTemporalErrorTest.klass
package com.errors

user User
{
    userId: String key userId;
}

class DummyClass versioned audited
{
    id: Long id key;
}
